# mouse-jiggler

./: Cargo.toml  README.md
src/: animation.rs  bounds.rs  cli.rs  config.rs  input.rs  main.rs  mouse.rs
