[package]
name = "mouse-jiggler"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["cargo", "wrap_help"] }
fastrand = "1.8"
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
mouse-rs = "0.4"
spin_sleep = "1.1"
thiserror = "1.0"
