[package]
name = "mouser"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["cargo", "wrap_help"] }
fastrand = "1.8"
# temporary fork until PR is merged
mouse-rs = { git = "https://github.com/bwpge/mouse-rs" }
spin_sleep = "1.1"
thiserror = "1.0"
