[package]
name = "mouser"
version = "0.3.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["cargo", "wrap_help"] }
crossterm = "0.26.1"
fastrand = "1.8"
# temporary git repo until crate is updated
mouse-rs = { git = "https://github.com/AltF02/mouse-rs.git" }
spin_sleep = "1.1"
thiserror = "1.0"
